Editing logo issues, searchbar alignment and color adjustments

--- a/src/assets/style/components/SearchBar.css
+++ b/src/assets/style/components/SearchBar.css
@@ -1,6 +1,10 @@
 @media (min-width: 1024px) {
-    .search-group {
+    .search-form {
         width: 40%;
+    }
+
+    .suggests {
+        width: 40%
     }
 
     .search-button {
@@ -13,8 +17,12 @@
 }
 
 @media (max-width: 1024px) {
-    .search-group {
+    .search-form {
         width: 80%;
+    }
+
+    .suggests {
+        width: 80%
     }
 
     .search-button {
@@ -31,6 +39,7 @@
         width: 20%;
     }
 }
+
 .search-bar {
     display: flex;
     flex-direction: row;
@@ -67,10 +76,10 @@
 }
 
 .suggests {
+    margin-left: 2px;
     border: 1px solid grey;
     border-top: none;
     border-radius: 0 0 25px 25px;
-    width: 100%;
 
     background-color: white;
 }
