--- a/src/assets/style/views/SearchView.css
+++ b/src/assets/style/views/SearchView.css
@@ -74,7 +74,7 @@
     justify-content: space-between;
 
     padding: 20px;
-    background-color: #ffffee;
+    background-color: #fff4de;
     box-shadow: 0px 2px 5px -2px rgba(0,0,0,0.62);
 }
 
@@ -83,7 +83,7 @@
 }
 
 .search-bar {
-    width:40%;
+    width: 100%;
 }
 
 .header-button {
